[tool.poetry]
name = "compustar-remote"
version = "0.1.0"
description = ""
authors = ["Isaac Parker <isaac@linux.com>"]
readme = "README.md"
packages = [{include = "compustar_remote"}]

[tool.poetry.dependencies]
python = "^3.9"
pyserial = "^3.5"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
